refactor : HttpParameters 를 분리하고, Request와 Response간 공유하도록 변경