@@ -1,16 +1,39 @@
 package http;
 
+import org.springframework.http.HttpMethod;
+
 import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 
 public class HttpHeader {
 
-    private Map<String, String> httpHeader = new HashMap<>();
+    public final static String HTTP_VERSION = "HTTP/1.1";
+    public final static String LOCATION = "Location";
+    public final static String SET_COOKIE = "Set-Cookie";
+    public final static String PATH = "; Path=/";
+    public final static String CONTENT_TYPE = "Content-Type";
+    public final static String CONTENT_LENGTH = "Content-Length";
+    public final static String ACCEPT = "Accept";
+    public final static String HOST = "Host";
+    public final static String ENCODING = "text/html;charset=utf-8";
+    public final static String HTTP = "http://";
 
-    public HttpHeader(BufferedReader bufferedReader) throws IOException {
+    private Map<String, String> httpHeader = new HashMap<>();
+    private HttpParameters httpParameters;
+    private HttpMethod httpMethod;
+    private String path;
+    private String version;
+
+    public HttpHeader(BufferedReader bufferedReader, HttpParameters httpParameters) throws IOException {
+        this.httpParameters = httpParameters;
+
+        String line = bufferedReader.readLine();
+        parseFirstLine(line);
         parseHeader(bufferedReader);
     }
 
@@ -18,13 +41,39 @@ public class HttpHeader {
         String line = bufferedReader.readLine();
         while ( line != null && !line.equals("")) {
             String[] currentLine = line.split(": ");
-            httpHeader.put(currentLine[0], URLDecoder.decode(currentLine[1],"UTF-8"));
+            httpHeader.put(currentLine[0], URLDecoder.decode(currentLine[1], StandardCharsets.UTF_8));
             line = bufferedReader.readLine();
         }
     }
 
+    private void parseFirstLine(String line) throws UnsupportedEncodingException {
+        String[] currentLine = line.split(" ");
+        httpMethod = HttpMethod.resolve(currentLine[0]);
+
+        String[] pathAndParameter = currentLine[1].split("\\?");
+        path = pathAndParameter[0];
+
+        if( pathAndParameter.length > 1 ) {
+            httpParameters.parseParameter(pathAndParameter[1]);
+        }
+
+        version = currentLine[2];
+    }
+
     public String getHeaderByKey(String key) {
         return httpHeader.getOrDefault(key, "");
+    }
+
+    public HttpMethod getHttpMethod() {
+        return httpMethod;
+    }
+
+    public String getPath() {
+        return path;
+    }
+
+    public String getVersion() {
+        return version;
     }
 
 }
